# exosip2

./: .astylerc  .gitignore  ChangeLog  Makefile.am  configure.ac
help/doxygen/: DoxyFile
include/eXosip2/: eX_call.h  eX_message.h  eX_options.h  eX_publish.h  eX_register.h  eX_setup.h  eX_subscribe.h  eXosip.h
platform/vsnet/: eXosip.vcxproj
scripts/: Makefile.am
src/: Makefile.am  eXcall_api.c  eXconf.c  eXinsubscription_api.c  eXmessage_api.c  eXoptions_api.c  eXosip.c  eXosip2.h  eXpublish_api.c  eXregister_api.c  eXsubscription_api.c  eXtl_dtls.c  eXtl_tcp.c  eXtl_tls.c  eXtl_udp.c  eXtransport.c  eXtransport.h  eXutils.c  inet_ntop.c  inet_ntop.h  jauth.c  jcall.c  jcallback.c  jdialog.c  jevents.c  jnotify.c  jpipe.c  jpipe.h  jpublish.c  jreg.c  jrequest.c  jresponse.c  jsubscribe.c  milenage.c  misc.c  rijndael.c  sdp_offans.c  udp.c
tools/: Makefile.am  sip_monitor.c  sip_reg.c
